@@ -51,6 +51,7 @@ Version 1.0.11 to be released
 - Bug #651: Fixed a bug in Oracle driver that may cause big loop (Qiang)
 - Bug #653: CDbMessageSource does translate messages when caching is enabled (Qiang)
 - Bug #670: Requirements checker page shows wrong minute (Qiang)
+- Bug #691: CUploadedFile::saveAs() may not return correct value for some PHP versions (Qiang)
 - Bug #710: CRequiredValidator does not work as expected when its requiredValue is not null (Qiang)
 - Bug: CQueue::peek() should return the first item in the queue (Qiang)
 - Enh #643: Enhanced CAccessControlFilter::expression, COutputCache::varyByExpression and CExpressionDependency::expression so that they can use PHP callback (Qiang)
@@ -62,6 +63,7 @@ Version 1.0.11 to be released
 - Enh #684: Improved Yii::import() to throw exception when set_include_path fails (Qiang)
 - Enh #685: Added support for recognizing "Z" in CDateFormatter (Qiang)
 - Enh #690: Enhanced the email validator pattern to capture 99% valid email addresses (Qiang)
+- Enh #697: Relational AR queries now also invoke CActiveRecord::beforeFind() (Qiang)
 - Enh #703: Upgraded autocomplete js code to version 1.1.0 (Qiang)
 - Enh: Added core message translation in Thai (Peerajak)
 - Enh: Allow CHtml::label() and CHtml::activeLabel() not to render the 'for' attribute when it is set false (Qiang)
